# experiment-sql

./: .gitignore  Cargo.toml  readme.md  requests.http
migrations/: 20240315193733_init.sql
src/: cli.rs  lib.rs  pagination.rs  todo-weg.rs  todo.rs
src/command/: list.rs  mod.rs  new.rs
