[package]
name = "todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
axum = "0.7.4"
clap = { version = "4.4.18", features = ["derive"] }
serde = { version = "1.0.196", features = ["derive"] }
thiserror = "1.0.56"
serde_json = "*"
tower = { version = "0.4", features = ["util", "timeout"] }
tower-http = { version = "0.5.0", features = ["add-extension", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
tokio = { version = "1.36.0", features = ["full"] }
sqlx = { version = "0.7.4", features = ["sqlite", "any", "runtime-tokio-rustls"] }
rstest = "0.18.2"
mockall = "0.12.1"
validator = "0.17.0"
